Add title and minor CSS fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Generator</title>
+    <title>Hat Words Generator</title>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://unpkg.com/@pdf-lib/fontkit@1.1.1/dist/fontkit.umd.js"></script>
     <!--<link rel="stylesheet" href="styles.css">-->
@@ -48,7 +48,7 @@
             </div>
             <div class="setting-row">
                 <label for="color" id="colorLabel">Color: </label>
-                <input type="color" id="color" value="#000000">
+                <input type="color" id="color" value="#000000" style="padding-top: 0px; padding-bottom: 0px;">
             </div>
             <div class="setting-row">
                 <label for="level" id="levelLabel">Difficulty Level: </label>
