--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Hat Words Generator</title>
+
+    <!-- libraries -->
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://unpkg.com/@pdf-lib/fontkit@1.1.1/dist/fontkit.umd.js"></script>
-    <!--<link rel="stylesheet" href="styles.css">-->
+
+    <!-- stylesheet -->
     <link rel="stylesheet" href="my_stylesheet.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/logo_black.png">
 </head>
 <body>
     <header>
@@ -36,10 +43,12 @@
             </div>
             <div class="setting-row">
                 <label for="font" id="fontLabel">Font: </label>
-                <select id="font">
-                    <option value="georgia">Georgia</option>
-                    <option value="arial">Arial</option>
-                    <option value="garamond">Garamond</option>
+                <select id="font" style="font-family: Georgia;">
+                    <option value="Arial">Arial</option>
+                    <option value="Garamond">Garamond</option>
+                    <option value="Georgia" default>Georgia</option>
+                    <option value="Rubik">Rubik</option>
+                    <option value="Roboto">Roboto</option>
                 </select>
             </div>
             <div class="setting-row">
