--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="my_stylesheet.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="/logo_black.png">
+    <link rel="shortcut icon" type="image/x-icon" href="logo_black.png">
 </head>
 <body>
     <header>
