--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <script src="https://unpkg.com/@pdf-lib/fontkit@1.1.1/dist/fontkit.umd.js"></script>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="my_stylesheet.css">
+    <link rel="stylesheet" href="styles/my_stylesheet.css">
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="logo_black.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo_black.png">
 </head>
 <body>
     <header>
