Add logo to title

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 <body>
     <header>
-        <h1 id="titleText">Hat words generator</h1>
+        <h1 class="icon-text">
+            <span class="material-symbols-outlined">school</span>
+            <span id="titleText">Hat Words Generator</span>
+        </h1>
+
         <span class="icon-text">
             <span class="material-symbols-outlined">language</span>
             <select id="languageSelector" onchange="changeLanguage()">
