Add translation for Dictionary

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <div class="settings-container">
             <div class="setting-row">
-                <label for="dictionary" id="dictionaryLabel">Dictionary: </label>
+                <label for="dictionary" id="dictionaryLabel">Dictionary:</label>
                 <select id="dictionary">
                     <option value="Roman">Roman</option>
                     <option value="Moscow">Moscow</option>
@@ -119,7 +119,7 @@
 
         <div class="settings-container">
             <div class="setting-row">
-                <label for="level" id="levelLabel">Difficulty Level: </label>
+                <label for="level" id="levelLabel">Difficulty level: </label>
                 <select id="level">
                     <option value="easy">Easy</option>
                     <option value="medium">Medium</option>
