Add kids' dictionaries

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 
         <div class="settings-container">
             <div class="setting-row">
-                <label for="cols" id="colsLabel">Cols:</label>
+                <label for="cols" id="colsLabel" class="axis">Cols:</label>
                 <input type="number" id="cols" value="3" min="1" oninput="updateWordCount()">
 
                 <span>×</span>
 
-                <label for="rows" id="rowsLabel">Rows:</label>
+                <label for="rows" id="rowsLabel" class="axis">Rows:</label>
                 <input type="number" id="rows" value="20" min="1" oninput="updateWordCount()">
 
                 <span>×</span>
 
-                <label for="pages" id="pagesLabel">Pages:</label>
+                <label for="pages" id="pagesLabel" class="axis">Pages:</label>
                 <input type="number" id="pages" value="1" min="1" oninput="updateWordCount()">
 
                 <span>=</span>
@@ -112,7 +112,8 @@
                     <option value="Roman">Roman</option>
                     <option value="Moscow">Moscow</option>
                     <option value="EnglishHat">EnglishHat</option>
-                    <option value="EnglishOrange">EnglishOrange</option>
+                    <option value="ClavisKids_20feb">ClavisKids_20feb</option>
+                    <option value="KidsNew">KidsNew</option>
                 </select>
             </div>
         </div>
